--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "bip39": "^3.0.4",
     "bip84": "^0.2.5",
     "bitcoinjs-lib": "^5.2.0",
+    "fs": "0.0.1-security",
     "ts-node": "^10.2.0",
     "typescript": "^4.3.5",
     "wif": "^2.0.6"
