change main function file

--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "walllet-dev-study",
   "version": "1.0.0",
   "description": "",
-  "main": "getMultiSigAddresses.js",
+  "main": "getMnemonic.js",
   "dependencies": {
     "bip32": "^2.0.6",
     "bip39": "^3.0.4",
